# bazel-typescript-esm-conflict

./: .bazelrc  .gitignore  .swcrc  BUILD.bazel  MODULE.bazel  README.md  biome.jsonc  cspell.json  jest-bazel.config.cjs  jest.config.cjs  knip.json  package.json  pnpm-lock.yaml  tsconfig.json
src/: app.module.spec.ts  index.ts
